testsuite/tests/checks/library_level_subprograms/test.out
lib.adb:2:11: error: declaration of library level subprogram
2 | procedure Lib is                   --  FLAG
  |           ^^^ 

lib2.adb:2:11: error: declaration of library level subprogram
2 | procedure Lib2 is new Gen;
  |           ^^^^ 

